@@ -1,6 +1,7 @@
 David Rowlands (25 April 2002)
 ------------------------------
 Added Timeraiders patch to allow teams to deploy beacons etc.
+Added lladnar's patch to gather credits from planets.
 
 David Rowlands (14 April 2002)
 ------------------------------
